@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Add some documentation for how to portably create indices
 
 0.002213  2014-12-03 08:44:10-06:00 America/Chicago
  - Fix some POD formatting
